Make sure that the itemview's count property is reliable

This fixes a missing countChanged signal when model
changes happen while the itemview component is not
completely initialized.

Task-number: QTBUG-37115
Change-Id: I20c749b9e521b0292186adbecd09e1d362520881
Reviewed-by: Alan Alpert <aalpert@blackberry.com>